--- a/src/styl/_theme-colors.styl
+++ b/src/styl/_theme-colors.styl
@@ -3,6 +3,7 @@ themes = {
     post-css: #2DA0C3,
     post-js: #D6BA32,
     post-html: #EB7728,
+    post-otm: #7D669E,
     post-svg: #7D669E,
     post-dev: #637a91,
     post-misc: #7AAB13
