--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,11 +1,10 @@
 <section class="author" itemprop="author">
     <div class="details" itemscope itemtype="http://schema.org/Person">
-        <img itemprop="image" class="img-rounded" src="/assets/img/blog-author.jpg" alt="Willian Justen">
+        <img itemprop="image" class="img-rounded" width="120" height="120" src="https://lh3.googleusercontent.com/x5GM1DniZATDrMQIkOUCmBgNHx2-aHYdDpME9yv6gvscJ-2MPkd0ZKDtMDOsUYoGrPDJ_hGWNw=w5120-h3200-no" alt="{{site.name}}">
         <p class="def">Autor</p>
         <h3 class="name">
-            <a itemprop="name" href="http://github.com/willianjusten">Willian Justen</a>
+            <a itemprop="name" href="https://plus.google.com/+{{site.gplus_username}}/posts">{{site.username}}</a>
         </h3>
-        <p class="desc"><span itemprop="jobTitle">Desenvolvedor Front End</span> e nerd nas horas vagas</p>
-        <a class="email" href="https://github.com/willianjusten">github.com/willianjusten</a>
+        <p class="desc">{{site.user_description}}</p>
     </div>
 </section>
