--- a/_includes/pre-venda-js.html
+++ b/_includes/pre-venda-js.html
@@ -1,5 +1,5 @@
 <section class="marketing marketing-js">
-    <h1>JS com TDD na Prática</h1>
-    <h2>Aprenda testes na prática e garanta um currículo melhor para o mercado.</h2>
-    <a href="https://www.eventick.com.br/javascript-com-tdd-na-pratica" onclick="ga('send', 'event', 'mkt', 'click', 'prevenda javascript')" class="btn-marketing btn-js" target="_blank">Comprar Agora</a>
+    <h1>Novo curso</h1>
+    <h2>Descrição detalhada.</h2>
+    <a href="https://www.eventick.com.br/" onclick="ga('send', 'event', 'mkt', 'click', 'prevenda javascript')" class="btn-marketing btn-js" target="_blank">Comprar Agora</a>
 </section>
