--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,7 +3,7 @@
         <img itemprop="image" class="img-rounded" width="120" height="120" src="https://lh3.googleusercontent.com/x5GM1DniZATDrMQIkOUCmBgNHx2-aHYdDpME9yv6gvscJ-2MPkd0ZKDtMDOsUYoGrPDJ_hGWNw=w5120-h3200-no" alt="{{site.name}}">
         <p class="def">Autor</p>
         <h3 class="name">
-            <a itemprop="name" href="https://plus.google.com/+{{site.gplus_username}}/posts">{{site.username}}</a>
+            <a itemprop="name" href="https://plus.google.com/+LeandroResendeMundim/posts">{{site.username}}</a>
         </h3>
         <p class="desc">{{site.user_description}}</p>
     </div>
