--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>Feito com <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> e <span class="love">❤</span></p>
+    <p>Feito com <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>.</p>
 </footer>
