--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer>
     <p>Feito com <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>.</p>
 </footer>
+<script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
