--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>Feito com <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>.</p>
+    <p>&copy; Leandro Mundim 2016</a>.</p>
 </footer>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
