--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>&copy; Mundim da Educaçãom, 2016</a>.</p>
+    <p>&copy; Mundim da Educação, 2016</a>.</p>
 </footer>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
