--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@ layout: compress
 <!DOCTYPE html>
 <html lang="pt-br" itemscope itemtype="http://schema.org/WebPage" {% if page.main-class %}class="post-{{ page.main-class }}"{% endif %}>
     {% include head.html %}
+    ![Imagem cartao](https://lh3.googleusercontent.com/e5Jwg2hnGitSlnUocbm3aWEmMprrGibVhX9af1qP__506uAG53FZjkSKQ5GcmOERuMKs17PG5Q=w5120-h3200-no)
     <body>
         {% include svg-icons.html %}
         {% include header-default.html %}
