--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
     {% include head.html %}
     <body>
          <div id="_rock">
-            <img src="https://lh3.googleusercontent.com/e5Jwg2hnGitSlnUocbm3aWEmMprrGibVhX9af1qP__506uAG53FZjkSKQ5GcmOERuMKs17PG5Q=w5120-h3200-no" alt="Rock" id="rock"/>
+            <img src="https://abrilveja.files.wordpress.com/2016/06/jared-leto-caracterizado-de-coringa-em-primeira-foto-oficial-de-esquadrao-suicida-original2.jpeg?quality=70&strip=all&w=677" alt="Rock" id="rock"/>
         </div>
         {% include svg-icons.html %}
         {% include header-default.html %}
