--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,10 @@ layout: compress
 <html lang="pt-br" itemscope itemtype="http://schema.org/WebPage" {% if page.main-class %}class="post-{{ page.main-class }}"{% endif %}>
     {% include head.html %}
     <body>
-         <div id="_rock">
-            <img src="https://abrilveja.files.wordpress.com/2016/06/jared-leto-caracterizado-de-coringa-em-primeira-foto-oficial-de-esquadrao-suicida-original2.jpeg?quality=70&strip=all&w=677" alt="Rock" id="rock"/>
-        </div>
+
         {% include svg-icons.html %}
         {% include header-default.html %}
+            <img src="https://abrilveja.files.wordpress.com/2016/06/jared-leto-caracterizado-de-coringa-em-primeira-foto-oficial-de-esquadrao-suicida-original2.jpeg?quality=70&strip=all&w=677"/>
             <section class="content">
                 {{ content }}
             </section>
