--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@
                 {{ content }}
             </article>
 
+            {% include pre-venda-js.html %}
             {% include share.html %}
             {% include author.html %}
             {% include comments.html %}
