--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -19,6 +19,7 @@
     {% for link in site.links %}
       <li><a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a></li>
     {% endfor %}
+    <li><a class="feed" href="{{ site.url }}/feed.xml" title="Atom/RSS feed">Feed</a></li>
   </ul>
 </nav>
 </aside>
