--- a/src/styl/_theme-colors.styl
+++ b/src/styl/_theme-colors.styl
@@ -4,7 +4,7 @@ themes = {
     post-js: #D6BA32,
     post-html: #EB7728,
     post-svg: #7D669E,
-    post-lrm: #7D669E,
+    post-lrm: #AA7F39,
     post-dev: #637a91,
     post-misc: #7AAB13
 }
